--- a/ScoutSuite/output/data/html/partials/gcp/services.kubernetesengine.clusters.html
+++ b/ScoutSuite/output/data/html/partials/gcp/services.kubernetesengine.clusters.html
@@ -10,6 +10,7 @@
         <div class="list-group-item-text item-margin">Project ID: <span id="kubernetesengine.projects.{{project}}.clusters.{{@key}}.project_id"><samp>{{project}}</samp></span></div>
         <div class="list-group-item-text item-margin">Location: <span id="kubernetesengine.projects.{{project}}.clusters.{{@key}}.location"><samp>{{location}}</samp></span></div>
         <div class="list-group-item-text item-margin">Type: <span id="kubernetesengine.projects.{{project}}.clusters.{{@key}}.type"><samp>{{type}}</samp></span></div>
+        <div class="list-group-item-text item-margin">Mode: <span id="kubernetesengine.projects.{{project}}.clusters.{{@key}}.mode"><samp>{{mode}}</samp></span></div>
         <div class="list-group-item-text item-margin">Status: <span id="kubernetesengine.projects.{{project}}.clusters.{{@key}}.status"><samp>{{status}}</samp></span></div>
         <div class="list-group-item-text item-margin">Image Type: <span id="kubernetesengine.projects.{{@../key}}.clusters.{{@key}}.container_optimized_os_not_used">{{image_type}}</span></div>
         <div class="list-group-item-text item-margin">Release Channel: <span id="kubernetesengine.projects.{{project}}.clusters.{{@key}}.release_channel"><samp>{{value_or_none release_channel}}</samp></span></div>
